[TOOLS-4747] issues that occurred after updating Eclipse 2025-06 and JDK 21. (#244)
http://jira.cubrid.org/browse/TOOLS-4747

- Add check set in selectworkspace issue
- Code to remove the default coolbar item is changed.
- Fixed an issue where categories were not displayed on the Preferences page.
- Fixed a URL deprecation warning.
- Added a non-existent message.
- datatype list is not displayed in TableEditorPart.
- when program start, fixed exception issues
- When importing, there is a problem where the schema in the file name is not mapped if it is in lowercase.
- Fixes an issue where TableView doesn't refresh. You need to refresh after pack.
- Fixes an issue where 'perspective' would not switch in Manager mode initially.
- Fixed an issue that occurred when there was no broker.
- Fixed a problem that occurred when registered JDBC was deleted.
- fixed warning for ConfigurationScope and InstanceScope
- Changed cubridmanager windows icon for eclipse 4
- fixed the problem that add host does not work when there is MonitorView in the navigator
- fixed null exception when dispose HostDashboardViewPart
- add match pattern for maven jdbc driver
- resize issue for coolbar